--- a/clock/index.html
+++ b/clock/index.html
@@ -109,7 +109,7 @@
           oPen.fill();
           oPen.closePath();
 
-          tDiv.innerHTML = hour+":"+min+":"+sec;
+          tDiv.innerHTML = date.getHours()+":"+min+":"+sec;
         }
       };
     </script>
