--- a/CanvasClock/index.html
+++ b/CanvasClock/index.html
@@ -21,6 +21,7 @@
         var x = 200;
         var y = 200;
         var r = 150;
+        var oHour = null;
         var oCav = document.getElementById('ca1');
         var oPen = oCav.getContext('2d');
         var tDiv = document.getElementById('tdiv');
@@ -33,7 +34,7 @@
           var min = date.getMinutes();
           var sec = date.getSeconds();
 
-          hour = hour>12?hour-12:hour;
+          oHour = hour>12?hour-12:hour;
           oPen.clearRect(0,0,400,400);
           /*时钟大小*/
           oPen.beginPath();
@@ -77,7 +78,7 @@
           oPen.beginPath();
           oPen.lineWidth = 6;
           oPen.moveTo(x,y);
-          oPen.arc(x,y,70/150*r,(-1/4+hour/12+min/60/12)*2*Math.PI,(-1/4+hour/12+min/60/12)*2*Math.PI,false);
+          oPen.arc(x,y,70/150*r,(-1/4+oHour/12+min/60/12)*2*Math.PI,(-1/4+oHour/12+min/60/12)*2*Math.PI,false);
           oPen.stroke();
           oPen.closePath();
           /*分针*/
@@ -109,7 +110,7 @@
           oPen.fill();
           oPen.closePath();
 
-          tDiv.innerHTML = date.getHours()+":"+min+":"+sec;
+          tDiv.innerHTML = (hour>9?hour:"0"+hour) + ":" + (min>9?min:"0"+min) + ":" +  (sec>9?sec:"0"+sec);
         }
       };
     </script>
